add translations and change ui

--- a/packages/admin-dashboard/src/locales/en/assets.json
+++ b/packages/admin-dashboard/src/locales/en/assets.json
@@ -1,24 +1,31 @@
 {
-  "assetDetails": "Asset details",
-  "close": "Close",
-  "delete": "Delete",
-  "edit": "Edit",
-  "deleteSuccess": "Asset has been deleted successfully",
-  "deleteFail": "Asset has not been deleted",
-  "editSuccess": "Asset has been edited",
-  "editFail": "Asset has not been edited",
-  "createFailed": "Failed to create asset",
-  "createSuccess": "Asset created ",
-  "dropzone": "Drop your file here or click to browse.",
-  "filesSelected": " files picked",
-  "noFilesSelected": "No files selected",
-  "invalidFileTypes": "Invalid file types",
-  "detailsTable": {
-    "id": "Id",
+    "assetDetails": "Asset details",
+    "close": "Close",
+    "delete": "Delete",
+    "edit": "Edit",
+    "deleteSuccess": "The asset was successfully removed",
+    "deleteFail": "The asset was not removed",
+    "editSuccess": "The resource has been edited",
+    "editFail": "The resource has not been edited",
+    "createFailed": "Failed to create resource",
+    "createSuccess": "Resource created",
+    "dropzone": "Drop the file here or click to view it.",
+    "filesSelected": " selected files",
+    "noFilesSelected": "No files selected",
+    "invalidFileTypes": "Invalid file types",
+    "browseAssets": "Browse resources",
+    "uploadAssets": "Upload a resource",
+    "preview": "Image",
     "name": "Name",
-    "fileSize": "File size",
-    "createdAt": "Created",
-    "size": "Size",
-    "source": "Path"
-  }
+    "actions": "Shares",
+    "copyURL": "Copy URL",
+    "open": "Open",
+    "detailsTable": {
+        "id": "Id",
+        "name": "Name",
+        "fileSize": "File size",
+        "createdAt": "Created",
+        "size": "Size",
+        "source": "Path"
+    }
 }
