--- a/packages/admin-dashboard/src/locales/en/customers.json
+++ b/packages/admin-dashboard/src/locales/en/customers.json
@@ -1,11 +1,12 @@
 {
+    "customer": "Customer",
     "personalData": {
         "header": "Personal data",
         "title": "Title",
-        "firstName": "First name",
-        "lastName": "Last name",
-        "emailAddress": "Email address",
-        "phoneNumber": "Phone number"
+        "firstName": "Name",
+        "lastName": "Surname",
+        "emailAddress": "E-mail address",
+        "phoneNumber": "Telephone number"
     },
     "verified": {
         "header": "Customer roles",
@@ -14,15 +15,15 @@
     },
     "customerGroups": {
         "header": "Customer groups",
-        "placeholder": "Add groups",
-        "toastAdded": "User has been added to the group",
-        "toastRemoved": "User has been removed from the group",
-        "createCustomerFirst": "After customer creation, you will be able to add him or her to different customer groups here"
+        "placeholder": "Adding groups",
+        "toastAdded": "User has been added to a group",
+        "toastRemoved": "User was removed from the group",
+        "createCustomerFirst": "Once you have created a customer, you will be able to add them to the various customer groups here"
     },
     "addresses": {
         "header": "Addresses",
-        "empty": "It looks like there are no addresses yet.",
-        "createCustomerFirst": "After customer creation, you will be able to add his or her first address here.",
+        "empty": "It appears that there are no addresses yet.",
+        "createCustomerFirst": "Once the client has been created, you will be able to add their first address here.",
         "addBtn": "Add address",
         "phoneNumberShort": "tel.{{value}}",
         "edit": "Edit",
@@ -34,43 +35,43 @@
     },
     "history": {
         "header": "History",
-        "toastError": "There was an error",
-        "toastSuccess": "Action completed successfully"
+        "toastError": "An error has occurred",
+        "toastSuccess": "Action successfully completed"
     },
     "selectAddress": {
-        "nameRequired": "Full Name is required",
+        "nameRequired": "Full name is required",
         "streetRequired": "Street Line 1 is required",
         "cityRequired": "City name is required",
-        "postalCodeRequired": "Postal Code is required",
+        "postalCodeRequired": "Postal code is required",
         "countryRequired": "Country is required",
-        "phoneNumberRequired": "Phone Number is required",
+        "phoneNumberRequired": "Telephone number is required",
         "shippingHeader": "Shipping address",
         "billingHeader": "Billing address",
-        "shippingDescription": "Here you can set shipping address",
-        "billingDescription": "Here you can set billing address",
+        "shippingDescription": "Here you can set the shipping address",
+        "billingDescription": "Here you can set the billing address",
         "changeShippingAddress": "Change shipping address",
         "selectShippingAddress": "Select shipping address",
         "createShippingAddress": "Create shipping address",
-        "changeBillingAddress": "Change billing address",
+        "changeBillingAddress": "Change of billing address",
         "selectBillingAddress": "Select billing address",
         "createBillingAddress": "Create billing address",
-        "selectAddress": "Select Address",
-        "createAddress": "Create Address",
-        "editAddress": "Edit Address",
-        "deleteAddress": "Delete Address",
+        "selectAddress": "Select address",
+        "createAddress": "Create address",
+        "editAddress": "Edit address",
+        "deleteAddress": "Delete address",
         "more": "More",
-        "addressSuccessUpdateToast": "Address updated successfully",
-        "addressSuccessCreateToast": "Address created successfully",
-        "addressSuccessDeleteToast": "Address deleted successfully",
-        "addressSuccessSetAsDefaultBillingToast": "Address set as default billing address successfully",
-        "addressSuccessSetAsDefaultShippingToast": "Address set as default shipping address successfully",
+        "addressSuccessUpdateToast": "The address has been successfully updated",
+        "addressSuccessCreateToast": "Address successfully created",
+        "addressSuccessDeleteToast": "Address successfully deleted",
+        "addressSuccessSetAsDefaultBillingToast": "Address successfully set as default billing address",
+        "addressSuccessSetAsDefaultShippingToast": "Successfully set address as default shipping address",
         "addressFailedCreateToast": "Address selection failed",
         "addressFailedUpdateToast": "Address creation failed",
         "addressFailedDeleteToast": "Address deletion failed",
         "addressFailedSetAsDefaultToast": "Setting address as default failed",
-        "newAddress": "New address: {{address}} added to user  account",
+        "newAddress": "New address: {{address}} added to user account",
         "addressAddFailed": "Failed to add new address to user account",
-        "phoneError": "Invalid phone number format",
+        "phoneError": "Incorrect phone number format",
         "close": "Close",
         "setAsDefaultShipping": "Set as default shipping address",
         "setAsDefaultBilling": "Set as default billing address",
@@ -78,17 +79,17 @@
         "phoneNumberShort": "tel.{{value}}",
         "defaultBilling": "Default billing address",
         "defaultShipping": "Default shipping address",
-        "isDefaultBilling": "Customer default shipping address",
-        "isDefaultShipping": "Customer default billing address",
+        "isDefaultBilling": "Customer's default shipping address",
+        "isDefaultShipping": "Default billing address of the customer",
         "createForCustomer": "Create for customer",
-        "inputNameLabel": "Full Name",
-        "inputNamePlaceholder": "Full Name",
-        "inputCompanyLabel": "Company Name",
-        "inputCompanyPlaceholder": "Company Name",
-        "inputPhoneLabel": "Phone Number",
-        "inputPhonePlaceholder": "Phone Number",
-        "inputPostalLabel": "Postal Code",
-        "inputPostalPlaceholder": "Postal Code",
+        "inputNameLabel": "Name",
+        "inputNamePlaceholder": "Name",
+        "inputCompanyLabel": "Company name",
+        "inputCompanyPlaceholder": "Company name",
+        "inputPhoneLabel": "Telephone number",
+        "inputPhonePlaceholder": "Telephone number",
+        "inputPostalLabel": "Postcode",
+        "inputPostalPlaceholder": "Postcode",
         "inputProvinceLabel": "Province",
         "inputProvincePlaceholder": "Province",
         "inputCityLabel": "City",
@@ -97,8 +98,8 @@
         "inputStreetPlaceholder": "Street Line 1",
         "inputStreet2Label": "Street Line 2",
         "inputStreet2Placeholder": "Street Line 2",
-        "inputTaxLabel": "Company Tax ID",
-        "inputTaxPlaceholder": "Company Tax ID"
+        "inputTaxLabel": "Company tax ID",
+        "inputTaxPlaceholder": "Company tax identifier"
     },
     "validation": {
         "firstNameRequired": "First name is required",
