--- a/packages/admin-dashboard/src/locales/en/products.json
+++ b/packages/admin-dashboard/src/locales/en/products.json
@@ -1,186 +1,186 @@
 {
-  "add": "Add product",
-  "assets": "Assets",
-  "baseInfoId": "Id: {{value}}",
-  "baseInfoCreated": "Created: {{value}}",
-  "baseInfoUpdated": "Updated: {{value}}",
-  "facetPlaceholder": "Add facets",
-  "group": "Group",
-  "image": "Image",
-  "name": "Name",
-  "slug": "Slug",
-  "product": "Product",
-  "variants": "Variants",
-  "enabled": "Enabled",
-  "facets": "Facets",
-  "collections": "Collections",
-  "channels": "Channels",
-  "options": "Options",
-  "optionGroups": "Option Groups",
-  "editOptions": "Edit options",
-  "editOption": "Edit option",
-  "sku": "sku",
-  "price": "price",
-  "tax_category": "tax category",
-  "taxes": "taxes",
-  "editProduct": "Edit product",
-  "deleteProduct": "Delete Product",
-  "addPrice": "Add price",
-  "seo": "SEO",
-  "color": "Color",
-  "colors": "Colors",
-  "colorPalettes": "Color palettes",
-  "otherOptions": "Other options",
-  "isNew": "New",
-  "isHidden": "Hidden",
-  "products": "Products",
-  "forms": {
-    "create": "Create Product",
-    "update": "Update Product",
-    "createVariant": "Create variant",
-    "updateVariant": "Update variant",
-    "removeVariant": "Remove variant"
-  },
-  "optionsTab": {
-    "placeholder": "Type to add a new option value",
-    "groupName": "Group name",
-    "values": "Option values",
-    "emptyState": {
-      "title": "Nothing here",
-      "description": "There are no option groups yet. Use the button above to add some."
-    }
-  },
-  "variantsTab": {
-    "emptyState": {
-      "title": "Nothing here",
-      "description": "There are no variants yet. Use the button above to add some, providing that you already added some options. If not, create them in the Options tab first."
-    }
-  },
-  "table": {
-    "featuredAsset": "Image",
-    "id": "ID",
-    "createdAt": "Created At",
-    "updatedAt": "Updated At",
-    "name": "Name",
-    "slug": "Slug",
-    "variants": "# of variants",
-    "collections": "In collections",
-    "inValueCollections": "In {{value}} collections",
-    "openMenu": "Open menu",
-    "actions": "Actions",
-    "copyId": "Copy product ID",
-    "delete": "Delete product",
-    "allVariantsStock": "Stock of all variants",
-    "allocated": "allocated",
-    "stock": "Stock"
-  },
-  "deleteProductDialog": {
-    "button": "Delete product",
-    "title": "Are you sure?",
-    "description": "The product will be deleted permanently.",
-    "confirm": "Delete Product",
-    "cancel": "Cancel"
-  },
-  "columns": "Columns",
-  "toasts": {
-    "deletionProductErrorToast": "Failed to delete product",
-    "deletionProductSuccessToast": "Product deleted successfully",
-    "updateProductErrorToast": "Failed to edit the product",
-    "updateProductSuccessToast": "Product updated successfully",
-    "createProductSuccessToast": "Product created successfully",
-    "createProductErrorToast": "Failed to create product",
-    "fetchProductErrorToast": "Failed to fetch product",
-    "createProductVariantSuccessToast": "Variant has been created",
-    "createProductVariantErrorToast": "Failed to create the variant",
-    "updateProductVariantSuccessToast": "Variant has been updated",
-    "updateProductVariantErrorToast": "Failed to update the variant",
-    "deleteProductVariantSuccessToast": "Variant has been deleted",
-    "deleteProductVariantErrorToast": "Failed to delete the variant",
-    "createOptionSuccessToast": "Option created successfully",
-    "createOptionInUseToast": "Option is used by some variants. Remove them first.",
-    "createOptionErrorToast": "Failed to create the option",
-    "deleteOptionSuccessToast": "Option deleted successfully",
-    "deleteOptionErrorToast": "Failed to delete the option",
-    "updateOptionSuccessToast": "Option has been updated",
-    "updateOptionErrorToast": "Failed to update the option",
-    "deletionOptionSuccessToast": "Option group removed successfully",
-    "deletionOptionErrorToast": "Failed to remove the option group",
-    "createOptionGroupSuccessToast": "Option group created successfully",
-    "createOptionGroupErrorToast": "Failed to create the option group"
-  },
-  "details": {
-    "addStockLocation": "Add stock location",
-    "basicInfo": "Basic info",
-    "customFields": "Custom fields",
-    "facetValues": "Facet value",
+    "add": "Add product",
+    "assets": "Assets",
+    "baseInfoId": "Id: {{value}}",
+    "baseInfoCreated": "Created: {{value}}",
+    "baseInfoUpdated": "Updated: {{value}}",
+    "facetPlaceholder": "Add aspects",
+    "group": "Group",
     "image": "Image",
-    "price": "Price",
-    "featuredAsset": "Featured asset",
-    "otherAssets": "Other asset",
-    "noFeaturedAsset": "Not set",
-    "noAssets": "There are no assets yet",
-    "setAsFeatured": "Set as featured",
-    "removeAsset": "Remove asset",
-    "usedForColorsDesc": "Use this attribute for guys that are colours",
-    "colorsCollectionDesc": "Use this for the product paths in COLOUR (BLATH/CORPUS)",
-    "usedForProductCreationsDesc": "Use this attribute when creating a colour collection",
-    "valueDeleteSuccess": "Asset value has been deleted successfully",
-    "valueDeleteFail": "There was an error: ",
-    "taxRateDescription": "Includes tax at: ",
-    "stockLevels": "Stock levels",
-    "trackInventory": "Track inventory",
-    "track": "Track",
-    "notTrack": "Do not track",
-    "inherit": "Inherit from global settings",
-    "outThreshold": "Out-of-stock threshold",
-    "useGlobal": "Use global value",
-    "defaultStock1": "Total stock level",
-    "defaultStock2": "Total stock level: Allocated"
-  },
-  "customFields": {
-    "seo": {
-      "title": "SEO title",
-      "description": "SEO description",
-      "facebookImage": "Facebook SEO image",
-      "twitterImage": "Twitter SEO image"
+    "name": "Name",
+    "slug": "Snail",
+    "product": "Product",
+    "variants": "Variants",
+    "enabled": "Included",
+    "facets": "Aspects",
+    "collections": "Collections",
+    "channels": "Channels",
+    "options": "Options",
+    "optionGroups": "Option groups",
+    "editOptions": "Editing options",
+    "editOption": "Edit option",
+    "sku": "sku",
+    "price": "price",
+    "tax_category": "tax category",
+    "taxes": "taxes",
+    "editProduct": "Edit product",
+    "deleteProduct": "Delete product",
+    "addPrice": "Add price",
+    "seo": "SEO",
+    "color": "Colour",
+    "colors": "Colours",
+    "colorPalettes": "Colour palettes",
+    "otherOptions": "Other options",
+    "isNew": "New",
+    "isHidden": "Hidden",
+    "products": "Products",
+    "forms": {
+        "create": "Create product",
+        "update": "Update product",
+        "createVariant": "Create variant",
+        "updateVariant": "Update variant",
+        "removeVariant": "Delete variant"
     },
-    "images": {
-      "mainImage": "Main product image",
-      "hoverImage": "Hover product image"
+    "optionsTab": {
+        "placeholder": "Type to add a new option value",
+        "groupName": "Group name",
+        "values": "Option values",
+        "emptyState": {
+            "title": "There is nothing here",
+            "description": "There are no option groups yet. Use the button above to add them."
+        }
     },
-    "textCards": {
-      "completionDate": "Completion date",
-      "delivery": "Delivery",
-      "payment": "Payment",
-      "materials": "Materials",
-      "finish": "Finish",
-      "sizes": "Sizes"
+    "variantsTab": {
+        "emptyState": {
+            "title": "There is nothing here",
+            "description": "There are no options available yet. Use the button above to add them, provided you have already added some options. If not, create them first in the Options tab."
+        }
     },
-    "discountRating": {
-      "title": "General",
-      "discountedBy": "Discounted by",
-      "rating": "Rating score"
+    "table": {
+        "featuredAsset": "Image",
+        "id": "ID",
+        "createdAt": "Created in",
+        "updatedAt": "Updated in",
+        "name": "Name",
+        "slug": "Auger",
+        "variants": "# Number of variants",
+        "collections": "In collections",
+        "inValueCollections": "In collections {{value}}",
+        "openMenu": "Open menu",
+        "actions": "Activities",
+        "copyId": "Copy id",
+        "delete": "Delete product",
+        "allVariantsStock": "Stock of all variants",
+        "allocated": "allocated",
+        "stock": "Shares"
+    },
+    "deleteProductDialog": {
+        "button": "Delete product",
+        "title": "Are you sure?",
+        "description": "The product will be permanently removed.",
+        "confirm": "Delete product",
+        "cancel": "Cancel"
+    },
+    "columns": "Columns",
+    "toasts": {
+        "deletionProductErrorToast": "Product deletion failed",
+        "deletionProductSuccessToast": "Product was successfully deleted",
+        "updateProductErrorToast": "Product could not be edited",
+        "updateProductSuccessToast": "Product has been successfully updated",
+        "createProductSuccessToast": "Product successfully created",
+        "createProductErrorToast": "Product could not be created",
+        "fetchProductErrorToast": "Product download failed",
+        "createProductVariantSuccessToast": "Variant has been created",
+        "createProductVariantErrorToast": "Variant not created",
+        "updateProductVariantSuccessToast": "Variant has been updated",
+        "updateProductVariantErrorToast": "Variant could not be updated",
+        "deleteProductVariantSuccessToast": "Variant has been deleted",
+        "deleteProductVariantErrorToast": "Variant could not be removed",
+        "createOptionSuccessToast": "Variant successfully created",
+        "createOptionInUseToast": "Option is used by some variants. Remove them first.",
+        "createOptionErrorToast": "Failed to create option",
+        "deleteOptionSuccessToast": "Option successfully deleted",
+        "deleteOptionErrorToast": "Option could not be deleted successfully",
+        "updateOptionSuccessToast": "Option has been updated",
+        "updateOptionErrorToast": "Option failed to update",
+        "deletionOptionSuccessToast": "Option group was successfully deleted",
+        "deletionOptionErrorToast": "Option group could not be deleted",
+        "createOptionGroupSuccessToast": "Option group successfully created",
+        "createOptionGroupErrorToast": "Option group could not be created"
+    },
+    "details": {
+        "addStockLocation": "Add stock location",
+        "basicInfo": "Basic information",
+        "customFields": "Custom fields",
+        "facetValues": "Aspect value",
+        "image": "Image",
+        "price": "Price",
+        "featuredAsset": "Recommended assets",
+        "otherAssets": "Other assets",
+        "noFeaturedAsset": "Not established",
+        "noAssets": "No assets yet",
+        "setAsFeatured": "Set as recommended",
+        "removeAsset": "Remove resource",
+        "usedForColorsDesc": "Use this attribute for guys who are colours",
+        "colorsCollectionDesc": "Use this for product paths in COLOUR (BLAT/CORPUS)",
+        "usedForProductCreationsDesc": "Use this attribute when creating a colour collection",
+        "valueDeleteSuccess": "The value of the resource was successfully deleted",
+        "valueDeleteFail": "An error occurred:",
+        "taxRateDescription": "Contains tax in:",
+        "stockLevels": "Stock levels",
+        "trackInventory": "Inventory tracking",
+        "track": "Tracking",
+        "notTrack": "Do not track",
+        "inherit": "Inheritance from global settings",
+        "outThreshold": "Exhaustion threshold",
+        "useGlobal": "Use global value",
+        "defaultStock1": "Total stock level",
+        "defaultStock2": "Total stock levels: Allocated"
+    },
+    "customFields": {
+        "seo": {
+            "title": "SEO title",
+            "description": "Description SEO",
+            "facebookImage": "SEO image on Facebook",
+            "twitterImage": "SEO image on Twitter"
+        },
+        "images": {
+            "mainImage": "Main product image",
+            "hoverImage": "Product image after hovering the cursor"
+        },
+        "textCards": {
+            "completionDate": "Completion date",
+            "delivery": "Delivery",
+            "payment": "Payment",
+            "materials": "Materials",
+            "finish": "Finishing",
+            "sizes": "Sizes"
+        },
+        "discountRating": {
+            "title": "General",
+            "discountedBy": "Discounted by",
+            "rating": "Evaluation result"
+        }
+    },
+    "addOptionGroupDialog": {
+        "title": "Add option group",
+        "name": "Name",
+        "code": "Code",
+        "cancel": "Cancel",
+        "add": "Add"
+    },
+    "addVariantDialog": {
+        "title": "Add product variant",
+        "name": "Name",
+        "sku": "SKU",
+        "cancel": "Cancel",
+        "add": "Add variant",
+        "new": "New variant",
+        "selectOption": "Select option",
+        "createBasic": "Basic data",
+        "createOptions": "Options"
+    },
+    "validation": {
+        "nameSlugRequired": "Name and slug fields are required"
     }
-  },
-  "addOptionGroupDialog": {
-    "title": "Add option group",
-    "name": "Name",
-    "code": "Code",
-    "cancel": "Cancel",
-    "add": "Add"
-  },
-  "addVariantDialog": {
-    "title": "Add product variant",
-    "name": "Name",
-    "sku": "SKU",
-    "cancel": "Cancel",
-    "add": "Add variant",
-    "new": "New variant",
-    "selectOption": "Select option",
-    "createBasic": "Basic data",
-    "createOptions": "Options"
-  },
-  "validation": {
-    "nameSlugRequired": "Both name and slug fields are required"
-  }
 }
