--- a/packages/admin-dashboard/src/locales/pl/channels.json
+++ b/packages/admin-dashboard/src/locales/pl/channels.json
@@ -22,7 +22,7 @@
     "details": {
         "basic": {
             "title": "Podstawowe informacje",
-            "code": "Code",
+            "code": "Kod",
             "token": "Token",
             "seller": "Sprzedawca",
             "languages": "Dostępne języki",
