--- a/packages/admin-dashboard/src/locales/pl/countries.json
+++ b/packages/admin-dashboard/src/locales/pl/countries.json
@@ -23,9 +23,9 @@
     "details": {
         "basic": {
             "title": "Podstawowe informacje",
-            "code": "Code",
-            "name": "Name",
-            "enabled": "Enabled"
+            "code": "Kod",
+            "name": "Nazwa",
+            "enabled": "Włączone"
         }
     },
     "validation": {
