--- a/packages/admin-dashboard/src/locales/pl/customers.json
+++ b/packages/admin-dashboard/src/locales/pl/customers.json
@@ -1,110 +1,109 @@
 {
-  "personalData": {
-    "header": "Dane osobowe",
-    "title": "Tytuł",
-    "firstName": "Imię",
-    "lastName": "Nazwisko",
-    "emailAddress": "Adres e-mail",
-    "phoneNumber": "Numer telefonu"
-  },
-  "verified": {
-    "header": "Role klientów",
-    "true": "Zweryfikowany",
-    "false": "Gość"
-  },
-  "customerGroups": {
-    "header": "Grupy klientów",
-    "placeholder": "Dodawanie grup",
-    "toastAdded": "Użytkownik został dodany do grupy",
-    "toastRemoved": "Użytkownik został usunięty z grupy",
-    "createCustomerFirst": "Po utworzeniu klienta będziesz mógł dodać go do różnych grup klientów tutaj"
-  },
-  "addresses": {
-    "header": "Adresy",
-    "empty": "Wygląda na to, że nie ma jeszcze adresów.",
-    "createCustomerFirst": "Po utworzeniu klienta będziesz mógł dodać jego pierwszy adres tutaj.",
-    "addBtn": "Dodaj adres",
-    "phoneNumberShort": "tel.{{value}}",
-    "edit": "Edytuj",
-    "save": "Zapisz",
-    "cancel": "Anuluj"
-  },
-  "orders": {
-    "header": "Zamówienia"
-  },
-  "history": {
-    "header": "Historia",
-    "toastError": "Wystąpił błąd",
-    "toastSuccess": "Akcja zakończona pomyślnie"
-  },
-  "selectAddress": {
-    "noBillingAddress": "Brak adresu rozliczeniowego",
-    "noShippingAddress": "Brak adresu wysyłki",
-    "nameRequired": "Pełna nazwa jest wymagana",
-    "streetRequired": "Ulica Linia 1 jest wymagana",
-    "cityRequired": "Nazwa miasta jest wymagana",
-    "postalCodeRequired": "Kod pocztowy jest wymagany",
-    "countryRequired": "Kraj jest wymagany",
-    "phoneNumberRequired": "Numer telefonu jest wymagany",
-    "shippingHeader": "Adres wysyłki",
-    "billingHeader": "Adres rozliczeniowy",
-    "shippingDescription": "Tutaj można ustawić adres wysyłki",
-    "billingDescription": "Tutaj można ustawić adres rozliczeniowy",
-    "changeShippingAddress": "Zmień adres wysyłki",
-    "selectShippingAddress": "Wybierz adres wysyłki",
-    "createShippingAddress": "Utwórz adres wysyłki",
-    "changeBillingAddress": "Zmiana adresu rozliczeniowego",
-    "selectBillingAddress": "Wybierz adres rozliczeniowy",
-    "createBillingAddress": "Utwórz adres rozliczeniowy",
-    "selectAddress": "Wybierz adres",
-    "createAddress": "Utwórz adres",
-    "editAddress": "Edytuj adres",
-    "deleteAddress": "Usuń adres",
-    "more": "Więcej",
-    "addressSuccessUpdateToast": "Adres został pomyślnie zaktualizowany",
-    "addressSuccessCreateToast": "Adres utworzony pomyślnie",
-    "addressSuccessDeleteToast": "Adres został pomyślnie usunięty",
-    "addressSuccessSetAsDefaultBillingToast": "Pomyślnie ustawiono adres jako domyślny adres rozliczeniowy",
-    "addressSuccessSetAsDefaultShippingToast": "Pomyślne ustawienie adresu jako domyślnego adresu wysyłki",
-    "addressFailedCreateToast": "Wybór adresu nie powiódł się",
-    "addressFailedUpdateToast": "Tworzenie adresu nie powiodło się",
-    "addressFailedDeleteToast": "Usunięcie adresu nie powiodło się",
-    "addressFailedSetAsDefaultToast": "Ustawienie adresu jako domyślnego nie powiodło się",
-    "newAddress": "Nowy adres: {{address}} dodany do konta użytkownika",
-    "addressAddFailed": "Nie udało się dodać nowego adresu do konta użytkownika",
-    "phoneError": "Nieprawidłowy format numeru telefonu",
-    "close": "Zamknij",
-    "setAsDefaultShipping": "Ustaw jako domyślny adres wysyłki",
-    "setAsDefaultBilling": "Ustaw jako domyślny adres rozliczeniowy",
-    "countrySelectLabel": " Kraj:",
-    "phoneNumberShort": "tel.{{value}}",
-    "defaultBilling": "Domyślny adres rozliczeniowy",
-    "defaultShipping": "Domyślny adres wysyłki",
-    "isDefaultBilling": "Domyślny adres wysyłki klienta",
-    "isDefaultShipping": "Domyślny adres rozliczeniowy klienta",
-    "createForCustomer": "Utwórz dla klienta",
-    "inputNameLabel": "Imię i nazwisko",
-    "inputNamePlaceholder": "Full Name",
-    "inputCompanyLabel": "Nazwa firmy",
-    "inputCompanyPlaceholder": "Company Name",
-    "inputPhoneLabel": "Numer telefonu",
-    "inputPhonePlaceholder": "Phone Number",
-    "inputPostalLabel": "Kod pocztowy",
-    "inputPostalPlaceholder": "Postal Code",
-    "inputProvinceLabel": "Prowincja",
-    "inputProvincePlaceholder": "Province",
-    "inputCityLabel": "Miasto",
-    "inputCityPlaceholder": "City",
-    "inputStreetLabel": "Street Line 1",
-    "inputStreetPlaceholder": "Street Line 1",
-    "inputStreet2Label": "Street Line 2",
-    "inputStreet2Placeholder": "Street Line 2",
-    "inputTaxLabel": "Identyfikator podatkowy firmy",
-    "inputTaxPlaceholder": "Company Tax ID"
-  },
-  "validation": {
-    "firstNameRequired": "Imię jest wymagane",
-    "lastNameRequired": "Nazwisko jest wymagane",
-    "emailRequired": "Adres e-mail jest wymagany"
-  }
+    "customer": "Klient",
+    "personalData": {
+        "header": "Dane osobowe",
+        "title": "Tytuł",
+        "firstName": "Imię",
+        "lastName": "Nazwisko",
+        "emailAddress": "Adres e-mail",
+        "phoneNumber": "Numer telefonu"
+    },
+    "verified": {
+        "header": "Role klientów",
+        "true": "Zweryfikowany",
+        "false": "Gość"
+    },
+    "customerGroups": {
+        "header": "Grupy klientów",
+        "placeholder": "Dodawanie grup",
+        "toastAdded": "Użytkownik został dodany do grupy",
+        "toastRemoved": "Użytkownik został usunięty z grupy",
+        "createCustomerFirst": "Po utworzeniu klienta będziesz mógł dodać go do różnych grup klientów tutaj"
+    },
+    "addresses": {
+        "header": "Adresy",
+        "empty": "Wygląda na to, że nie ma jeszcze adresów.",
+        "createCustomerFirst": "Po utworzeniu klienta będziesz mógł dodać jego pierwszy adres tutaj.",
+        "addBtn": "Dodaj adres",
+        "phoneNumberShort": "tel.{{value}}",
+        "edit": "Edytuj",
+        "save": "Zapisz",
+        "cancel": "Anuluj"
+    },
+    "orders": {
+        "header": "Zamówienia"
+    },
+    "history": {
+        "header": "Historia",
+        "toastError": "Wystąpił błąd",
+        "toastSuccess": "Akcja zakończona pomyślnie"
+    },
+    "selectAddress": {
+        "nameRequired": "Pełna nazwa jest wymagana",
+        "streetRequired": "Ulica Linia 1 jest wymagana",
+        "cityRequired": "Nazwa miasta jest wymagana",
+        "postalCodeRequired": "Kod pocztowy jest wymagany",
+        "countryRequired": "Kraj jest wymagany",
+        "phoneNumberRequired": "Numer telefonu jest wymagany",
+        "shippingHeader": "Adres wysyłki",
+        "billingHeader": "Adres rozliczeniowy",
+        "shippingDescription": "Tutaj można ustawić adres wysyłki",
+        "billingDescription": "Tutaj można ustawić adres rozliczeniowy",
+        "changeShippingAddress": "Zmień adres wysyłki",
+        "selectShippingAddress": "Wybierz adres wysyłki",
+        "createShippingAddress": "Utwórz adres wysyłki",
+        "changeBillingAddress": "Zmiana adresu rozliczeniowego",
+        "selectBillingAddress": "Wybierz adres rozliczeniowy",
+        "createBillingAddress": "Utwórz adres rozliczeniowy",
+        "selectAddress": "Wybierz adres",
+        "createAddress": "Utwórz adres",
+        "editAddress": "Edytuj adres",
+        "deleteAddress": "Usuń adres",
+        "more": "Więcej",
+        "addressSuccessUpdateToast": "Adres został pomyślnie zaktualizowany",
+        "addressSuccessCreateToast": "Adres utworzony pomyślnie",
+        "addressSuccessDeleteToast": "Adres został pomyślnie usunięty",
+        "addressSuccessSetAsDefaultBillingToast": "Pomyślnie ustawiono adres jako domyślny adres rozliczeniowy",
+        "addressSuccessSetAsDefaultShippingToast": "Pomyślne ustawienie adresu jako domyślnego adresu wysyłki",
+        "addressFailedCreateToast": "Wybór adresu nie powiódł się",
+        "addressFailedUpdateToast": "Tworzenie adresu nie powiodło się",
+        "addressFailedDeleteToast": "Usunięcie adresu nie powiodło się",
+        "addressFailedSetAsDefaultToast": "Ustawienie adresu jako domyślnego nie powiodło się",
+        "newAddress": "Nowy adres: {{address}} dodany do konta użytkownika",
+        "addressAddFailed": "Nie udało się dodać nowego adresu do konta użytkownika",
+        "phoneError": "Nieprawidłowy format numeru telefonu",
+        "close": "Zamknij",
+        "setAsDefaultShipping": "Ustaw jako domyślny adres wysyłki",
+        "setAsDefaultBilling": "Ustaw jako domyślny adres rozliczeniowy",
+        "countrySelectLabel": " Kraj:",
+        "phoneNumberShort": "tel.{{value}}",
+        "defaultBilling": "Domyślny adres rozliczeniowy",
+        "defaultShipping": "Domyślny adres wysyłki",
+        "isDefaultBilling": "Domyślny adres wysyłki klienta",
+        "isDefaultShipping": "Domyślny adres rozliczeniowy klienta",
+        "createForCustomer": "Utwórz dla klienta",
+        "inputNameLabel": "Imię i nazwisko",
+        "inputNamePlaceholder": "Imię i nazwisko",
+        "inputCompanyLabel": "Nazwa firmy",
+        "inputCompanyPlaceholder": "Nazwa firmy",
+        "inputPhoneLabel": "Numer telefonu",
+        "inputPhonePlaceholder": "Numer telefonu",
+        "inputPostalLabel": "Kod pocztowy",
+        "inputPostalPlaceholder": "Kod pocztowy",
+        "inputProvinceLabel": "Prowincja",
+        "inputProvincePlaceholder": "Prowincja",
+        "inputCityLabel": "Miasto",
+        "inputCityPlaceholder": "Miasto",
+        "inputStreetLabel": "Street Line 1",
+        "inputStreetPlaceholder": "Street Line 1",
+        "inputStreet2Label": "Street Line 2",
+        "inputStreet2Placeholder": "Street Line 2",
+        "inputTaxLabel": "Identyfikator podatkowy firmy",
+        "inputTaxPlaceholder": "Identyfikator podatkowy firmy"
+    },
+    "validation": {
+        "firstNameRequired": "Imię jest wymagane",
+        "lastNameRequired": "Nazwisko jest wymagane",
+        "emailRequired": "Adres e-mail jest wymagany"
+    }
 }
