--- a/packages/admin-dashboard/src/locales/pl/dashboard.json
+++ b/packages/admin-dashboard/src/locales/pl/dashboard.json
@@ -20,10 +20,10 @@
     "thisYear": "W tym roku",
     "gross": "Brutto",
     "net": "Netto",
-    "thisWeekInterval": "This week",
+    "thisWeekInterval": "W tym tygodniu",
     "weeklyInterval": "Tygodnik",
     "lastWeekInterval": "Ostatni tydzień",
-    "thisMonthInterval": "This month",
+    "thisMonthInterval": "W tym miesiącu",
     "mothlyInterval": "Miesięcznie",
     "lastMonthInterval": "Ostatni miesiąc",
     "yearlyInterval": "Rocznie",
