--- a/packages/admin-dashboard/src/locales/pl/sellers.json
+++ b/packages/admin-dashboard/src/locales/pl/sellers.json
@@ -20,7 +20,7 @@
     "details": {
         "basic": {
             "title": "Podstawowe informacje",
-            "name": "Name",
+            "name": "Nazwa",
             "memberPlaceholder": "Dodaj członka"
         }
     },
