--- a/packages/admin-dashboard/src/locales/pl/zones.json
+++ b/packages/admin-dashboard/src/locales/pl/zones.json
@@ -21,8 +21,8 @@
     "details": {
         "basic": {
             "title": "Podstawowe informacje",
-            "name": "Name",
-            "members": "Members",
+            "name": "Nazwa",
+            "members": "Członkowie",
             "memberPlaceholder": "Dodaj członka"
         }
     },
