--- a/packages/admin-dashboard/src/locales/en/admins.json
+++ b/packages/admin-dashboard/src/locales/en/admins.json
@@ -1,57 +1,57 @@
 {
-  "create": "Create administrator",
-  "edit": "Edit administrator",
-  "baseInfoCode": "Code: {{value}}",
-  "baseInfoId": "Id: {{value}}",
-  "baseInfoCreated": "Created: {{value}}",
-  "baseInfoUpdated": "Updated: {{value}}",
-  "buttonDisabledTooltip": "Fill all required fields",
-  "noChangesTooltip": "You have not made any changes",
-  "table": {
-    "id": "Id",
-    "name": "Name",
-    "emailAddress": "Email",
-    "role": "Role",
-    "createdAt": "Created at",
-    "updatedAt": "Updated at",
-    "openMenu": "Open menu",
-    "copyId": "Copy id",
-    "viewAdmin": "View administrator",
-    "columns": "Columns"
-  },
-  "details": {
-    "basic": {
-      "title": "Basic info",
-      "firstName": "First name",
-      "lastName": "Last name",
-      "emailAddress": "Email address",
-      "password": "Password"
+    "create": "Create administrator",
+    "edit": "Edit administrator",
+    "baseInfoCode": "Code: {{value}}",
+    "baseInfoId": "Id: {{value}}",
+    "baseInfoCreated": "Created: {{value}}",
+    "baseInfoUpdated": "Updated: {{value}}",
+    "buttonDisabledTooltip": "Fill in all required fields",
+    "noChangesTooltip": "No changes have been made",
+    "table": {
+        "id": "Id",
+        "name": "Name",
+        "emailAddress": "Email",
+        "role": "Role",
+        "createdAt": "Created in",
+        "updatedAt": "Updated by",
+        "openMenu": "Open menu",
+        "copyId": "Copy ID",
+        "viewAdmin": "Display admin",
+        "columns": "Columns"
     },
-    "roles": {
-      "title": "Roles",
-      "placeholder": "Add roles to user"
+    "details": {
+        "basic": {
+            "title": "Basic information",
+            "firstName": "First name",
+            "lastName": "Surname",
+            "emailAddress": "E-mail address",
+            "password": "Password"
+        },
+        "roles": {
+            "title": "Roles",
+            "placeholder": "Adding roles to a user"
+        }
+    },
+    "toasts": {
+        "adminLoadingError": "Failed to load administrator with ID {{value}}",
+        "adminUpdateSuccess": "Administrator successfully updated",
+        "adminUpdateError": "An error occurred:",
+        "adminCreatedSuccess": "Administrator has been successfully created",
+        "adminCreatedError": "Administrator could not be created",
+        "adminDeleteSuccess": "Administrator was successfully deleted",
+        "adminDeleteError": "Administrator could not be removed successfully"
+    },
+    "deleteAdmin": {
+        "title": "Remove administrator",
+        "description": "Are you sure you want to delete this administrator?",
+        "successMessage": "The administrator has been removed.",
+        "deleteOrCancel": "Delete/Cancel option selected"
+    },
+    "selectedValue": "{{from}} of {{to}} lines was selected",
+    "validation": {
+        "firstNameRequired": "First name is required",
+        "lastNameRequired": "Last name is required",
+        "passwordRequired": "Password required",
+        "rolesRequired": "Select at least one role"
     }
-  },
-  "toasts": {
-    "adminLoadingError": "Failed to load administrator with id {{value}}",
-    "adminUpdateSuccess": "Administrator updated successfully",
-    "adminUpdateError": "Error occurred: ",
-    "adminCreatedSuccess": "Administrator has been created successfully",
-    "adminCreatedError": "Failed to create Administrator",
-    "adminDeleteSuccess": "Administrator deleted successfully",
-    "adminDeleteError": "Failed to delete Administrator"
-  },
-  "deleteAdmin": {
-    "title": "Delete administrator",
-    "description": "Are you sure you want to delete this administrator?",
-    "successMessage": "Administrator has been deleted.",
-    "deleteOrCancel": "Delete/Cancel selected"
-  },
-  "selectedValue": "{{from}} of {{to}} row(s) selected",
-  "validation": {
-    "firstNameRequired": "First name is required",
-    "lastNameRequired": "Last name is required",
-    "passwordRequired": "Password is required",
-    "rolesRequired": "Select at least one role"
-  }
 }
