--- a/packages/admin-dashboard/src/locales/en/channels.json
+++ b/packages/admin-dashboard/src/locales/en/channels.json
@@ -1,65 +1,65 @@
 {
-  "create": "Create channel",
-  "edit": "Edit channel",
-  "baseInfoCode": "Code: {{value}}",
-  "baseInfoId": "Id: {{value}}",
-  "baseInfoCreated": "Created: {{value}}",
-  "baseInfoUpdated": "Updated: {{value}}",
-  "defaultChannel": "Default Channel",
-  "buttonDisabledTooltip": "Fill all required fields",
-  "noChangesTooltip": "You have not made any changes",
-  "table": {
-    "id": "Id",
-    "code": "Code",
-    "token": "Token",
-    "createdAt": "Created at",
-    "updatedAt": "Updated at",
-    "openMenu": "Open menu",
-    "copyId": "Copy id",
-    "viewChannel": "View channel",
-    "columns": "Columns"
-  },
-  "details": {
-    "basic": {
-      "title": "Basic info",
-      "code": "Code",
-      "token": "Token",
-      "seller": "Seller",
-      "languages": "Available languages",
-      "languagePlaceholder": "Add language",
-      "currencies": "Available currencies",
-      "currencyPlaceholder": "Add currency"
+    "create": "Create channel",
+    "edit": "Edit channel",
+    "baseInfoCode": "Code: {{value}}",
+    "baseInfoId": "Id: {{value}}",
+    "baseInfoCreated": "Created: {{value}}",
+    "baseInfoUpdated": "Updated: {{value}}",
+    "defaultChannel": "Default channel",
+    "buttonDisabledTooltip": "Fill in all required fields",
+    "noChangesTooltip": "No changes have been made",
+    "table": {
+        "id": "Id",
+        "code": "Code",
+        "token": "Token",
+        "createdAt": "Created in",
+        "updatedAt": "Updated by",
+        "openMenu": "Open menu",
+        "copyId": "Copy ID",
+        "viewChannel": "Display channel",
+        "columns": "Columns"
     },
-    "defaults": {
-      "title": "Defaults",
-      "defaultLanguage": "Default language",
-      "defaultCurrency": "Default currency",
-      "defaultTaxZone": "Default tax zone",
-      "defaultShippingZone": "Default shipping zone",
-      "includeTax": "Prices include tax for the default Zone"
+    "details": {
+        "basic": {
+            "title": "Basic information",
+            "code": "Code",
+            "token": "Token",
+            "seller": "Vendor",
+            "languages": "Available languages",
+            "languagePlaceholder": "Add language",
+            "currencies": "Available currencies",
+            "currencyPlaceholder": "Add currency"
+        },
+        "defaults": {
+            "title": "Default",
+            "defaultLanguage": "Default language",
+            "defaultCurrency": "Default currency",
+            "defaultTaxZone": "Default tax zone",
+            "defaultShippingZone": "Default shipping zone",
+            "includeTax": "Prices include tax for the default zone"
+        }
+    },
+    "toasts": {
+        "channelLoadingError": "Failed to load channel with ID {{value}}",
+        "channelUpdateSuccess": "Channel has been successfully updated",
+        "channelUpdateError": "An error occurred:",
+        "channelCreatedSuccess": "Channel was successfully created",
+        "channelCreatedError": "Channel could not be created",
+        "channelDeleteSuccess": "Channel was successfully deleted",
+        "channelDeleteError": "Channel could not be deleted"
+    },
+    "deleteChannel": {
+        "title": "Delete channel",
+        "description": "Are you sure you want to delete this channel?",
+        "successMessage": "The channel has been removed.",
+        "deleteOrCancel": "Delete/Cancel option selected"
+    },
+    "selectedValue": "{{from}} of {{to}} lines was selected",
+    "validation": {
+        "codeRequired": "The code is required",
+        "tokenRequired": "Token required",
+        "langCodeRequired": "Default language code required",
+        "shippingZoneRequired": "Default shipping zone is required",
+        "taxZoneRequired": "Default tax zone is required"
     }
-  },
-  "toasts": {
-    "channelLoadingError": "Failed to load channel with id {{value}}",
-    "channelUpdateSuccess": "Channel updated successfully",
-    "channelUpdateError": "Error occurred: ",
-    "channelCreatedSuccess": "Channel has been created successfully",
-    "channelCreatedError": "Failed to create channel",
-    "channelDeleteSuccess": "Channel deleted successfully",
-    "channelDeleteError": "Failed to delete channel"
-  },
-  "deleteChannel": {
-    "title": "Delete channel",
-    "description": "Are you sure you want to delete this channel?",
-    "successMessage": "Channel has been deleted.",
-    "deleteOrCancel": "Delete/Cancel selected"
-  },
-  "selectedValue": "{{from}} of {{to}} row(s) selected",
-  "validation": {
-    "codeRequired": "Code is required",
-    "tokenRequired": "Token is required",
-    "langCodeRequired": "Default language code is required",
-    "shippingZoneRequired": "Default shipping zone is required",
-    "taxZoneRequired": "Default tax zone is required"
-  }
 }
