--- a/packages/admin-dashboard/src/locales/en/collections.json
+++ b/packages/admin-dashboard/src/locales/en/collections.json
@@ -1,148 +1,148 @@
 {
-  "create": "Create collection",
-  "edit": "Edit collection",
-  "baseInfoCode": "Code: {{value}}",
-  "baseInfoId": "Id: {{value}}",
-  "baseInfoCreated": "Created: {{value}}",
-  "baseInfoUpdated": "Updated: {{value}}",
-  "buttonDisabledTooltip": "Fill all required fields",
-  "noChangesTooltip": "You have not made any changes",
-  "table": {
-    "id": "Id",
-    "name": "Name",
-    "isPrivate": "Private",
-    "subCollections": "Collections",
-    "createdAt": "Created at",
-    "updatedAt": "Updated at",
-    "columns": "Columns",
-    "featuredAsset": "Image",
-    "breadcrumb": "Breadcrumb",
-    "slug": "Slug",
-    "children": "# of childrens",
-    "collections": "In collections",
-    "actions": "Actions",
-    "copyId": "Copy product ID",
-    "products": "# of products",
-    "delete": "Delete collection"
-  },
-  "details": {
-    "basic": {
-      "title": "Basic info",
-      "name": "Name",
-      "slug": "Slug",
-      "isPrivate": "Is private",
-      "description": "Description"
-    },
-    "filters": {
-      "title": "Filters",
-      "inherit": "Inherit filters",
-      "condition": "Condition",
-      "addCondition": "Add condition",
-      "addFacets": "Add facet values"
-    },
-    "contents": {
-      "title": "Contents"
-    }
-  },
-  "visibility": {
-    "public": "Public",
-    "private": "Private"
-  },
-  "toasts": {
-    "collectionLoadingError": "Failed to load collection with id {{value}}",
-    "collectionUpdateSuccess": "Collection updated successfully",
-    "collectionUpdateError": "Error occurred: ",
-    "collectionCreatedSuccess": "Collection has been created successfully",
-    "collectionCreatedError": "Failed to create collection",
-    "collectionDeleteSuccess": "Collection deleted successfully",
-    "collectionDeleteError": "Failed to delete collection",
-    "deletionCollectionErrorToast": "Failed to delete collection",
-    "deletionCollectionSuccessToast": "Collections deleted successfully",
-    "noCollectionChildrens": "{{collection}} collection don't have any childrens"
-  },
-  "deleteCollection": {
-    "title": "Delete collection",
-    "description": "Are you sure you want to delete this collection?",
-    "successMessage": "Collection has been deleted.",
-    "deleteOrCancel": "Delete/Cancel selected"
-  },
-  "editCollection": "Edit collection",
-  "withSelected": "With {{collections}} selected",
-  "columns": "Columns",
-  "rowsSelected": "{{selected}} of {{all}} rows(s) selected",
-  "duplicateCollection": "You definitely want to duplicate these collections?",
-  "collectionActions": {
-    "move": "Move",
-    "copy": "Duplicate",
-    "assign": "Assign to channel",
-    "deleteFromChannel": "Remove from current channel"
-  },
-  "drawer": {
-    "close": "Close",
-    "title": "{{collectionName}} collection",
-    "count": "{{count}} products",
-    "product": "Product",
-    "variant": "Variant",
-    "sku": "SKU",
-    "filter": {
-      "title": "Filter..",
-      "name": "By variant name",
-      "sku": "By SKU",
-      "id": "By Id",
-      "labels": {
-        "name": "Variant name",
-        "sku": "SKU",
-        "id": "Id"
-      }
-    }
-  },
-  "deleteCollectionDialog": {
-    "button": "Delete collection",
-    "title": "Are you sure?",
-    "description": "The collection will be deleted permanently.",
-    "confirm": "Delete Collection",
-    "cancel": "Cancel"
-  },
-  "deleteCollectionsFromChannel": {
-    "areYouSure": "Are you sure to delete these collections from {{ channel }} ?",
-    "removeCollection": "Remove collection",
-    "cancel": "Cancel",
-    "removeSuccess": "Collections removed",
-    "removeError": "Couldn't remove collections from channel"
-  },
-  "moveCollectionsToChannels": {
-    "moveCollections": "Move collections",
-    "move": "Move",
-    "selected": "Selected",
-    "availableChannels": "Available channles",
-    "searchByCode": "Search by code..",
-    "searchByToken": "Search by token..",
+    "create": "Create a collection",
+    "edit": "Edit the collection",
+    "baseInfoCode": "Code: {{value}}",
+    "baseInfoId": "Id: {{value}}",
+    "baseInfoCreated": "Created: {{value}}",
+    "baseInfoUpdated": "Updated: {{value}}",
+    "buttonDisabledTooltip": "Fill in all required fields",
+    "noChangesTooltip": "No changes have been made",
     "table": {
-      "token": "Token",
-      "code": "Code",
-      "active": "Active"
+        "id": "Id",
+        "name": "Name",
+        "isPrivate": "Private",
+        "subCollections": "Collections",
+        "createdAt": "Established in",
+        "updatedAt": "Updated by",
+        "columns": "Columns",
+        "featuredAsset": "Image",
+        "breadcrumb": "Path",
+        "slug": "Snail",
+        "children": "# Number of children",
+        "collections": "In collections",
+        "actions": "Activities",
+        "copyId": "Copy id",
+        "products": "# number of products",
+        "delete": "Remove collection"
     },
-    "movedAllCollections": "Moved all collections",
-    "movedPartOfCollections": "Moved part of collections",
-    "moveError": "Couldn't move collections"
-  },
-  "moveCollectionsToCollections": {
-    "targetCollection": "Target collection",
-    "searchByName": "Search by name..",
-    "move": "Move",
-    "selected": "Selected",
-    "moveCollections": "Move collections",
-    "movedAllCollections": "Moved all collections",
-    "movedPartOfCollections": "Moved part of collections",
-    "moveError": "Couldn't move collections"
-  },
-  "errors": {
-    "generic": "Something wen't wrong",
-    "couldntMoveCollection": "Coudld't move collections"
-  },
-  "validation": {
-    "filtersCodeRequired": "Pick at least one filter",
-    "filterArgsRequired": "Fill all fields",
-    "nameSlugRequired": "Both fields name and slug are required"
-  }
+    "details": {
+        "basic": {
+            "title": "Basic information",
+            "name": "Name",
+            "slug": "Auger",
+            "isPrivate": "It is private",
+            "description": "Description"
+        },
+        "filters": {
+            "title": "Filters",
+            "inherit": "Filter inheritance",
+            "condition": "Status",
+            "addCondition": "Add condition",
+            "addFacets": "Adding aspect values"
+        },
+        "contents": {
+            "title": "Content"
+        }
+    },
+    "visibility": {
+        "public": "Public",
+        "private": "Private"
+    },
+    "toasts": {
+        "collectionLoadingError": "Failed to load collection with identifier {{value}}",
+        "collectionUpdateSuccess": "The collection was successfully updated",
+        "collectionUpdateError": "An error occurred:",
+        "collectionCreatedSuccess": "The collection was successfully created",
+        "collectionCreatedError": "Collection could not be created",
+        "collectionDeleteSuccess": "Collection was successfully deleted",
+        "collectionDeleteError": "Collection could not be deleted successfully",
+        "deletionCollectionErrorToast": "Failed to delete collection",
+        "deletionCollectionSuccessToast": "Collections were successfully deleted",
+        "noCollectionChildrens": "collection {{collection}} has no children"
+    },
+    "deleteCollection": {
+        "title": "Delete collection",
+        "description": "Are you sure you want to delete this collection?",
+        "successMessage": "The collection has been removed.",
+        "deleteOrCancel": "Delete/Cancel option selected"
+    },
+    "editCollection": "Edit collection",
+    "withSelected": "With selected {{collections}}",
+    "columns": "Columns",
+    "rowsSelected": "{{selected}} of {{all}} selected rows",
+    "duplicateCollection": "Are you sure you want to duplicate these collections?",
+    "collectionActions": {
+        "move": "Transfer",
+        "copy": "Duplicate",
+        "assign": "Assign to channel",
+        "deleteFromChannel": "Remove from current channel"
+    },
+    "drawer": {
+        "close": "Close",
+        "title": "collection {{collectionName}}",
+        "count": "{{count}} products",
+        "product": "Product",
+        "variant": "Variant",
+        "sku": "SKU",
+        "filter": {
+            "title": "Filter ...",
+            "name": "By variant name",
+            "sku": "By SKU",
+            "id": "According to Id",
+            "labels": {
+                "name": "Name of variant",
+                "sku": "SKU",
+                "id": "Id"
+            }
+        }
+    },
+    "deleteCollectionDialog": {
+        "button": "Delete collection",
+        "title": "Are you sure?",
+        "description": "The collection will be permanently deleted.",
+        "confirm": "Delete collection",
+        "cancel": "Cancel"
+    },
+    "deleteCollectionsFromChannel": {
+        "areYouSure": "Are you sure you want to delete these collections from {{ channel }} ?",
+        "removeCollection": "Delete a collection",
+        "cancel": "Cancel",
+        "removeSuccess": "Deleted collections",
+        "removeError": "Cannot delete a collection from a feed"
+    },
+    "moveCollectionsToChannels": {
+        "moveCollections": "Moving a collection",
+        "move": "Move",
+        "selected": "Selected",
+        "availableChannels": "Available channels",
+        "searchByCode": "Search by code",
+        "searchByToken": "Search by token...",
+        "table": {
+            "token": "Token",
+            "code": "Code",
+            "active": "Active"
+        },
+        "movedAllCollections": "All collections transferred",
+        "movedPartOfCollections": "Part of the collection has been transferred",
+        "moveError": "Unable to transfer collection"
+    },
+    "moveCollectionsToCollections": {
+        "targetCollection": "Target collection",
+        "searchByName": "Search by name...",
+        "move": "Transfer",
+        "selected": "Selected",
+        "moveCollections": "Transferring collections",
+        "movedAllCollections": "All collections transferred",
+        "movedPartOfCollections": "Part of the collection has been transferred",
+        "moveError": "Unable to transfer collection"
+    },
+    "errors": {
+        "generic": "Something was wrong",
+        "couldntMoveCollection": "I could not move the collection"
+    },
+    "validation": {
+        "filtersCodeRequired": "Select at least one filter",
+        "filterArgsRequired": "Fill in all fields",
+        "nameSlugRequired": "Name and slug fields are required"
+    }
 }
