--- a/packages/admin-dashboard/src/locales/en/facets.json
+++ b/packages/admin-dashboard/src/locales/en/facets.json
@@ -1,78 +1,78 @@
 {
-  "createFacet": "Create facet",
-  "baseInfoCode": "Code: {{value}}",
-  "baseInfoId": "Id: {{value}}",
-  "baseInfoCreated": "Created: {{value}}",
-  "baseInfoUpdated": "Updated: {{value}}",
-  "requiredError": "This value is required",
-  "buttonDisabledTooltip": "Fill all required fields",
-  "noChangesTooltip": "You have not made any changes",
-  "table": {
-    "id": "Id",
-    "name": "Name",
-    "createdAt": "Created at",
-    "updatedAt": "Updated at",
-    "code": "Code",
-    "isPrivate": "Private",
-    "public": "Public",
-    "languageCode": "Language code",
-    "usedForColors": "Used for colors",
-    "colorsCollection": "Colors collection",
-    "usedForProductCreations": "Used for product creations",
-    "values": "Values",
-    "openMenu": "Open menu",
-    "copyId": "Copy id",
-    "viewFacet": "View facet",
-    "columns": "Columns",
-    "color": "Color",
-    "new": "New",
-    "image": "Image"
-  },
-  "toasts": {
-    "facetLoadingError": "Failed to load facet with id {{value}}",
-    "facetUpdateSuccess": "Facet updated successfully",
-    "facetUpdateError": "Error occurred: ",
-    "facetCreatedSuccess": "Facet has been created successfully"
-  },
-  "visibility": {
-    "public": "Public",
-    "private": "Private"
-  },
-  "deleteFacet": {
-    "title": "Delete facet",
-    "description": "Are you sure you want to delete this facet?",
-    "successMessage": "Facet has been deleted.",
-    "deleteOrCancel": "Delete/Cancel selected"
-  },
-  "selectedValue": "{{from}} of {{to}} row(s) selected",
-  "details": {
-    "basicInfo": "Dane podstawowe",
-    "customFields": "Custom fields",
-    "facetValues": "Facet value",
-    "usedForColorsDesc": "Use this attribute for guys that are colours",
-    "colorsCollectionDesc": "Use this for the product paths in COLOUR (BLATH/CORPUS)",
-    "usedForProductCreationsDesc": "Use this attribute when creating a colour collection",
-    "valueDeleteSuccess": "Asset value has been deleted successfully",
-    "valueDeleteFail": "There was an error: "
-  },
-  "addValueModal": {
-    "button": "Add value",
-    "editButton": "Update value",
-    "title": "Add facet value",
-    "editTitle": "Edit facet value",
-    "nameLabel": "Facet value name",
-    "codeLabel": "Facet value code",
-    "isNew": "New",
-    "hidden": "Hidden",
-    "color": "Color",
-    "success": "Facet value added successfully",
-    "editSuccess": "Facet value updated successfully",
-    "error": "There was an error",
-    "options": "Options",
-    "image": "Image"
-  },
-  "buttons": {
-    "deleteValue": "Delete value",
-    "editValue": "Edit value"
-  }
+    "createFacet": "Create aspect",
+    "baseInfoCode": "Code: {{value}}",
+    "baseInfoId": "Id: {{value}}",
+    "baseInfoCreated": "Created: {{value}}",
+    "baseInfoUpdated": "Updated: {{value}}",
+    "requiredError": "This value is required",
+    "buttonDisabledTooltip": "Fill in all required fields",
+    "noChangesTooltip": "No changes have been made",
+    "table": {
+        "id": "Id",
+        "name": "Name",
+        "createdAt": "Created in",
+        "updatedAt": "Updated by",
+        "code": "Code",
+        "isPrivate": "Private",
+        "public": "Public",
+        "languageCode": "Language code",
+        "usedForColors": "Used for colours",
+        "colorsCollection": "Colour collection",
+        "usedForProductCreations": "Used to create products",
+        "values": "Values",
+        "openMenu": "Open menu",
+        "copyId": "Copy identifier",
+        "viewFacet": "View aspect",
+        "columns": "Columns",
+        "color": "Colour",
+        "new": "New",
+        "image": "Image"
+    },
+    "toasts": {
+        "facetLoadingError": "Failed to load aspect with id {{value}}",
+        "facetUpdateSuccess": "The facet has been successfully updated",
+        "facetUpdateError": "An error occurred:",
+        "facetCreatedSuccess": "The guy was created successfully"
+    },
+    "visibility": {
+        "public": "Public",
+        "private": "Private"
+    },
+    "deleteFacet": {
+        "title": "Remove aspect",
+        "description": "Are you sure you want to delete this aspect?",
+        "successMessage": "The aspect has been deleted.",
+        "deleteOrCancel": "Delete/Cancel option selected"
+    },
+    "selectedValue": "{{from}} of {{to}} lines was selected",
+    "details": {
+        "basicInfo": "Basic data",
+        "customFields": "Custom fields",
+        "facetValues": "Aspect value",
+        "usedForColorsDesc": "Use this attribute for guys who are colours",
+        "colorsCollectionDesc": "Use this for product paths in COLOUR (BLAT/CORPUS)",
+        "usedForProductCreationsDesc": "Use this attribute when creating a colour collection",
+        "valueDeleteSuccess": "The value of the resource was successfully deleted",
+        "valueDeleteFail": "An error occurred:"
+    },
+    "addValueModal": {
+        "button": "Add value",
+        "editButton": "Update value",
+        "title": "Add aspect value",
+        "editTitle": "Edit aspect value",
+        "nameLabel": "Aspect value name",
+        "codeLabel": "Aspect value code",
+        "isNew": "New",
+        "hidden": "Hidden",
+        "color": "Colour",
+        "success": "Added value of the aspect successfully",
+        "editSuccess": "Aspect value successfully updated",
+        "error": "An error has occurred",
+        "options": "Options",
+        "image": "Image"
+    },
+    "buttons": {
+        "deleteValue": "Delete value",
+        "editValue": "Edit value"
+    }
 }
