--- a/packages/admin-dashboard/src/locales/en/paymentMethods.json
+++ b/packages/admin-dashboard/src/locales/en/paymentMethods.json
@@ -1,59 +1,59 @@
 {
-  "create": "Create payment method",
-  "edit": "Edit payment method",
-  "baseInfoCode": "Code: {{value}}",
-  "baseInfoId": "Id: {{value}}",
-  "baseInfoCreated": "Created: {{value}}",
-  "baseInfoUpdated": "Updated: {{value}}",
-  "buttonDisabledTooltip": "Fill all required fields",
-  "noChangesTooltip": "You have not made any changes",
-  "table": {
-    "id": "Id",
-    "name": "Name",
-    "code": "Code",
-    "enabled": "Enabled",
-    "modalTitle": "Modal title",
-    "createdAt": "Created at",
-    "updatedAt": "Updated at",
-    "columns": "Columns"
-  },
-  "details": {
-    "basic": {
-      "title": "Basic info",
-      "name": "Name",
-      "description": "Description",
-      "code": "Code",
-      "enabled": "Enabled"
+    "create": "Create a payment method",
+    "edit": "Edit payment method",
+    "baseInfoCode": "Code: {{value}}",
+    "baseInfoId": "Id: {{value}}",
+    "baseInfoCreated": "Created: {{value}}",
+    "baseInfoUpdated": "Updated: {{value}}",
+    "buttonDisabledTooltip": "Fill in all required fields",
+    "noChangesTooltip": "No changes have been made",
+    "table": {
+        "id": "Id",
+        "name": "Name",
+        "code": "Code",
+        "enabled": "Enabled",
+        "modalTitle": "Modal title",
+        "createdAt": "Created in",
+        "updatedAt": "Updated by",
+        "columns": "Columns"
     },
-    "modal": {
-      "title": "Modal",
-      "name": "Modal title",
-      "description": "Modal description",
-      "additionalDescription": "Modal additional description"
+    "details": {
+        "basic": {
+            "title": "Basic information",
+            "name": "Name",
+            "description": "Description",
+            "code": "Code",
+            "enabled": "Enabled"
+        },
+        "modal": {
+            "title": "Modal",
+            "name": "Modal title",
+            "description": "Module description",
+            "additionalDescription": "Modal additional description"
+        },
+        "options": {
+            "title": "Options",
+            "handler": "Payment processing",
+            "checker": "Payment eligibility check module"
+        }
     },
-    "options": {
-      "title": "Options",
-      "handler": "Payment handler",
-      "checker": "Payment eligibility checker"
+    "toasts": {
+        "paymentMethodLoadingError": "Failed to load payment method with identifier {{value}}",
+        "paymentMethodUpdateSuccess": "Payment method has been successfully updated",
+        "paymentMethodUpdateError": "An error occurred:",
+        "paymentMethodCreatedSuccess": "Payment method was successfully created",
+        "paymentMethodCreatedError": "Payment method could not be created",
+        "paymentMethodDeleteSuccess": "Payment method was successfully deleted",
+        "paymentMethodDeleteError": "Payment method could not be deleted"
+    },
+    "deletePaymentMethod": {
+        "title": "Remove payment method",
+        "description": "Are you sure you want to delete this payment method?",
+        "successMessage": "The payment method has been deleted."
+    },
+    "validation": {
+        "codeRequired": "Code required",
+        "handlerCodeRequired": "Payment processing is required",
+        "handlerArgsRequired": "Fill in all fields"
     }
-  },
-  "toasts": {
-    "paymentMethodLoadingError": "Failed to load payment method with id {{value}}",
-    "paymentMethodUpdateSuccess": "Payment method updated successfully",
-    "paymentMethodUpdateError": "Error occurred: ",
-    "paymentMethodCreatedSuccess": "Payment method has been created successfully",
-    "paymentMethodCreatedError": "Failed to create payment method",
-    "paymentMethodDeleteSuccess": "Payment method deleted successfully",
-    "paymentMethodDeleteError": "Failed to delete payment method"
-  },
-  "deletePaymentMethod": {
-    "title": "Delete payment method",
-    "description": "Are you sure you want to delete this payment method?",
-    "successMessage": "Payment method has been deleted."
-  },
-  "validation": {
-    "codeRequired": "Code is required",
-    "handlerCodeRequired": "Payment handler is required",
-    "handlerArgsRequired": "Fill all the fields"
-  }
 }
