--- a/packages/admin-dashboard/src/locales/en/taxCategories.json
+++ b/packages/admin-dashboard/src/locales/en/taxCategories.json
@@ -1,47 +1,47 @@
 {
-  "create": "Create tax category",
-  "edit": "Edit tax category",
-  "baseInfoCode": "Code: {{value}}",
-  "baseInfoId": "Id: {{value}}",
-  "baseInfoCreated": "Created: {{value}}",
-  "baseInfoUpdated": "Updated: {{value}}",
-  "buttonDisabledTooltip": "Fill all required fields",
-  "noChangesTooltip": "You have not made any changes",
-  "table": {
-    "id": "Id",
-    "name": "Name",
-    "isDefault": "Is default",
-    "createdAt": "Created at",
-    "updatedAt": "Updated at",
-    "openMenu": "Open menu",
-    "copyId": "Copy id",
-    "viewTaxCategory": "View tax category",
-    "columns": "Columns"
-  },
-  "details": {
-    "basic": {
-      "title": "Basic info",
-      "name": "Name",
-      "isDefault": "Default"
+    "create": "Create a tax category",
+    "edit": "Edit tax category",
+    "baseInfoCode": "Code: {{value}}",
+    "baseInfoId": "Id: {{value}}",
+    "baseInfoCreated": "Created: {{value}}",
+    "baseInfoUpdated": "Updated: {{value}}",
+    "buttonDisabledTooltip": "Fill in all required fields",
+    "noChangesTooltip": "No changes have been made",
+    "table": {
+        "id": "Id",
+        "name": "Name",
+        "isDefault": "Is the default",
+        "createdAt": "Created in",
+        "updatedAt": "Updated by",
+        "openMenu": "Open menu",
+        "copyId": "Copy ID",
+        "viewTaxCategory": "Display tax category",
+        "columns": "Columns"
+    },
+    "details": {
+        "basic": {
+            "title": "Basic information",
+            "name": "Name",
+            "isDefault": "Default"
+        }
+    },
+    "toasts": {
+        "taxCategoryLoadingError": "Failed to load tax category with identifier {{value}}",
+        "taxCategoryUpdateSuccess": "Tax category has been successfully updated",
+        "taxCategoryUpdateError": "An error occurred:",
+        "taxCategoryCreatedSuccess": "Tax category was successfully created",
+        "taxCategoryCreatedError": "Failed to create tax category",
+        "taxCategoryDeleteSuccess": "Tax category was successfully deleted",
+        "taxCategoryDeleteError": "The tax category could not be removed successfully. It is probably in use",
+        "taxCategoryDeleteAllError": "Some tax categories have not been deleted. They are probably in use"
+    },
+    "deleteTaxCategory": {
+        "title": "Delete a tax category",
+        "description": "Are you sure you want to delete this tax category?",
+        "successMessage": "The tax category has been removed.",
+        "deleteOrCancel": "Delete/Cancel option selected"
+    },
+    "validation": {
+        "nameRequired": "Name is required"
     }
-  },
-  "toasts": {
-    "taxCategoryLoadingError": "Failed to load tax category with id {{value}}",
-    "taxCategoryUpdateSuccess": "Tax category updated successfully",
-    "taxCategoryUpdateError": "Error occurred: ",
-    "taxCategoryCreatedSuccess": "Tax category has been created successfully",
-    "taxCategoryCreatedError": "Failed to create tax category",
-    "taxCategoryDeleteSuccess": "Tax category deleted successfully",
-    "taxCategoryDeleteError": "Failed to delete tax category. It is probably in use",
-    "taxCategoryDeleteAllError": "Some tax categories were not deleted. They are probably in use"
-  },
-  "deleteTaxCategory": {
-    "title": "Delete tax category",
-    "description": "Are you sure you want to delete this tax category?",
-    "successMessage": "Tax category has been deleted.",
-    "deleteOrCancel": "Delete/Cancel selected"
-  },
-  "validation": {
-    "nameRequired": "Name is required"
-  }
 }
