--- a/packages/admin-dashboard/src/locales/en/taxRates.json
+++ b/packages/admin-dashboard/src/locales/en/taxRates.json
@@ -1,56 +1,56 @@
 {
-  "create": "Create tax rate",
-  "edit": "Edit tax rate",
-  "baseInfoCode": "Code: {{value}}",
-  "baseInfoId": "Id: {{value}}",
-  "baseInfoCreated": "Created: {{value}}",
-  "baseInfoUpdated": "Updated: {{value}}",
-  "buttonDisabledTooltip": "Fill all required fields",
-  "noChangesTooltip": "You have not made any changes",
-  "table": {
-    "id": "Id",
-    "name": "Name",
-    "enabled": "Enabled",
-    "taxCategory": "Tax category",
-    "zone": "Zone",
-    "value": "Rate",
-    "customerGroup": "Customer group",
-    "createdAt": "Created at",
-    "updatedAt": "Updated at",
-    "openMenu": "Open menu",
-    "copyId": "Copy id",
-    "viewTaxRate": "View tax rate",
-    "columns": "Columns"
-  },
-  "details": {
-    "basic": {
-      "title": "Basic info",
-      "name": "Name",
-      "enabled": "Enabled",
-      "taxCategory": "Tax category",
-      "zone": "Zone",
-      "value": "Value"
+    "create": "Creation of the tax rate",
+    "edit": "Editing a tax rate",
+    "baseInfoCode": "Code: {{value}}",
+    "baseInfoId": "Id: {{value}}",
+    "baseInfoCreated": "Created: {{value}}",
+    "baseInfoUpdated": "Updated: {{value}}",
+    "buttonDisabledTooltip": "Fill in all required fields",
+    "noChangesTooltip": "No changes have been made",
+    "table": {
+        "id": "Id",
+        "name": "Name",
+        "enabled": "Enabled",
+        "taxCategory": "Tax category",
+        "zone": "Zone",
+        "value": "Rate",
+        "customerGroup": "Customer group",
+        "createdAt": "Established in",
+        "updatedAt": "Updated by",
+        "openMenu": "Open menu",
+        "copyId": "Copy ID",
+        "viewTaxRate": "Display tax rate",
+        "columns": "Columns"
+    },
+    "details": {
+        "basic": {
+            "title": "Basic information",
+            "name": "Name",
+            "enabled": "Enabled",
+            "taxCategory": "Tax category",
+            "zone": "Zone",
+            "value": "Value"
+        }
+    },
+    "toasts": {
+        "taxRateLoadingError": "Failed to load tax rate with identifier {{value}}",
+        "taxRateUpdateSuccess": "Tax rate has been successfully updated",
+        "taxRateUpdateError": "An error occurred:",
+        "taxRateCreatedSuccess": "Tax rate was successfully created",
+        "taxRateCreatedError": "Tax rate could not be created",
+        "taxRateDeleteSuccess": "Tax rate was successfully deleted",
+        "taxRateDeleteError": "Tax rate could not be deleted"
+    },
+    "deleteTaxRate": {
+        "title": "Delete tax rate",
+        "description": "Are you sure you want to delete this tax rate?",
+        "successMessage": "The tax rate has been removed.",
+        "deleteOrCancel": "Delete/Cancel option selected"
+    },
+    "validation": {
+        "taxCategoryRequired": "Tax category is required",
+        "zoneRequired": "Zone is required",
+        "nameRequired": "Name is required",
+        "valueRequired": "Value is required"
     }
-  },
-  "toasts": {
-    "taxRateLoadingError": "Failed to load tax rate with id {{value}}",
-    "taxRateUpdateSuccess": "Tax rate updated successfully",
-    "taxRateUpdateError": "Error occurred: ",
-    "taxRateCreatedSuccess": "Tax rate has been created successfully",
-    "taxRateCreatedError": "Failed to create tax rate",
-    "taxRateDeleteSuccess": "Tax rate deleted successfully",
-    "taxRateDeleteError": "Failed to delete tax rate"
-  },
-  "deleteTaxRate": {
-    "title": "Delete tax rate",
-    "description": "Are you sure you want to delete this tax rate?",
-    "successMessage": "Tax rate has been deleted.",
-    "deleteOrCancel": "Delete/Cancel selected"
-  },
-  "validation": {
-    "taxCategoryRequired": "Tax category is required",
-    "zoneRequired": "Zone is required",
-    "nameRequired": "Name is required",
-    "valueRequired": "Value is required"
-  }
 }
