--- a/packages/admin-dashboard/src/locales/en/zones.json
+++ b/packages/admin-dashboard/src/locales/en/zones.json
@@ -1,47 +1,47 @@
 {
-  "create": "Create zone",
-  "edit": "Edit zone",
-  "baseInfoCode": "Code: {{value}}",
-  "baseInfoId": "Id: {{value}}",
-  "baseInfoCreated": "Created: {{value}}",
-  "baseInfoUpdated": "Updated: {{value}}",
-  "buttonDisabledTooltip": "Fill all required fields",
-  "noChangesTooltip": "You have not made any changes",
-  "table": {
-    "id": "Id",
-    "name": "Name",
-    "members": "Members",
-    "createdAt": "Created at",
-    "updatedAt": "Updated at",
-    "openMenu": "Open menu",
-    "copyId": "Copy id",
-    "viewZone": "View zone",
-    "columns": "Columns"
-  },
-  "details": {
-    "basic": {
-      "title": "Basic info",
-      "name": "Name",
-      "members": "Members",
-      "memberPlaceholder": "Add member"
+    "create": "Create zone",
+    "edit": "Edit zone",
+    "baseInfoCode": "Code: {{value}}",
+    "baseInfoId": "Id: {{value}}",
+    "baseInfoCreated": "Created: {{value}}",
+    "baseInfoUpdated": "Updated: {{value}}",
+    "buttonDisabledTooltip": "Fill in all required fields",
+    "noChangesTooltip": "No changes have been made",
+    "table": {
+        "id": "Id",
+        "name": "Name",
+        "members": "Members",
+        "createdAt": "Established in",
+        "updatedAt": "Updated by",
+        "openMenu": "Open menu",
+        "copyId": "Copy ID",
+        "viewZone": "View zone",
+        "columns": "Columns"
+    },
+    "details": {
+        "basic": {
+            "title": "Basic information",
+            "name": "Name",
+            "members": "Members",
+            "memberPlaceholder": "Add member"
+        }
+    },
+    "toasts": {
+        "zoneLoadingError": "Failed to load zone with identifier {{value}}",
+        "zoneUpdateSuccess": "Zone has been successfully updated",
+        "zoneUpdateError": "An error occurred:",
+        "zoneCreatedSuccess": "Zone was successfully created",
+        "zoneCreatedError": "Zone could not be created",
+        "zoneDeleteSuccess": "Zone was successfully deleted",
+        "zoneDeleteError": "Zone could not be deleted"
+    },
+    "deleteZone": {
+        "title": "Delete zone",
+        "description": "Are you sure you want to delete this zone?",
+        "successMessage": "The zone has been deleted.",
+        "deleteOrCancel": "Delete/Cancel option selected"
+    },
+    "validation": {
+        "nameRequired": "Zone name required"
     }
-  },
-  "toasts": {
-    "zoneLoadingError": "Failed to load zone with id {{value}}",
-    "zoneUpdateSuccess": "Zone updated successfully",
-    "zoneUpdateError": "Error occurred: ",
-    "zoneCreatedSuccess": "Zone has been created successfully",
-    "zoneCreatedError": "Failed to create zone",
-    "zoneDeleteSuccess": "Zone deleted successfully",
-    "zoneDeleteError": "Failed to delete zone"
-  },
-  "deleteZone": {
-    "title": "Delete zone",
-    "description": "Are you sure you want to delete this zone?",
-    "successMessage": "Zone has been deleted.",
-    "deleteOrCancel": "Delete/Cancel selected"
-  },
-  "validation": {
-    "nameRequired": "Zone name is required"
-  }
 }
