--- a/packages/admin-dashboard/src/locales/pl/common.json
+++ b/packages/admin-dashboard/src/locales/pl/common.json
@@ -9,12 +9,20 @@
     "accept": "Akceptuj",
     "show": "Pokaż",
     "content": "Treść",
+    "copyURL": "Kopiuj URL",
+    "open": "Otwórz",
+    "edit": "Edytuj",
+    "delete": "Usuń",
+    "preview": "Podgląd",
+    "details": "Szczegóły",
+    "customFields": "Pola niestandardowe",
     "defaultChannel": "Kanał domyślny",
+    "buttonDisabledTooltip": "Dodaj poprawne zmiany, aby zapisać",
     "confirmationDialog": {
         "title": "Potwierdź działanie",
         "description": "Czy na pewno chcesz wykonać tę czynność? To może być nieodwracalne",
         "confirmBtn": "Potwierdź",
-        "cancelBtn": "Cancel"
+        "cancelBtn": "Anuluj"
     },
     "emptyState": {
         "default": {
@@ -33,7 +41,7 @@
                 "text": "Nie ma jeszcze żadnych zamówień"
             },
             "filtered": {
-                "title": "Nothing matches",
+                "title": "Nic nie pasuje",
                 "text": "Nie ma zamówień pasujących do wyszukiwanych haseł"
             }
         },
@@ -43,8 +51,8 @@
                 "text": "Nie ma jeszcze żadnych wartości aspektów. Czy chciałbyś je dodać?"
             },
             "filtered": {
-                "title": "Nothing matches",
-                "text": "There are no orders that match your searching terms"
+                "title": "Nic nie pasuje",
+                "text": "Nie ma zamówień pasujących do wyszukiwanych haseł"
             }
         }
     },
@@ -100,7 +108,7 @@
         "systemStatus": "status systemu"
     },
     "noFilterField": "Brak",
-    "draft": "Wersja robocza",
+    "draft": "Projekt",
     "addingItems": "Dodawanie elementów",
     "arrangingPayment": "Organizowanie płatności",
     "arrangingAdditionalPayment": "Ustalenie dodatkowej płatności",
@@ -110,7 +118,7 @@
     "partiallyShipped": "Częściowo wysłane",
     "partiallyFulfilled": "Częściowo zrealizowane",
     "partiallyDelivered": "Częściowo zrealizowane",
-    "delivered": "Dostarczono",
+    "delivered": "Dostarczone",
     "cancelled": "Anulowane",
     "modifying": "Modyfikacja",
     "inRealization": "W realizacji",
@@ -123,7 +131,7 @@
     "photoBy": "Zdjęcie autorstwa",
     "unsplash": "Unsplash",
     "poweredBy": "Powered by",
-    "logVendure": "Log in into Vendure",
+    "logVendure": "Zaloguj się do Vendure",
     "awesomeMenu": {
         "activeAdministratorsValue": "Aktywni administratorzy ({{value}})",
         "activeAdministrators": "Aktywni administratorzy",
@@ -172,49 +180,49 @@
             "placeholder": "Wyszukiwanie według nazwy"
         },
         "CollectionFilterParameter": {
-            "placeholder": "Search by name"
+            "placeholder": "Wyszukiwanie według nazwy"
         },
         "FacetFilterParameter": {
-            "placeholder": "Search by name"
+            "placeholder": "Wyszukiwanie według nazwy"
         },
         "OrderFilterParameter": {
             "placeholder": "Wyszukiwanie według nazwiska klienta / identyfikatora / kodu / identyfikatora transakcji"
         },
         "ProductFilterParameter": {
-            "placeholder": "Search by name"
+            "placeholder": "Wyszukiwanie według nazwy"
         },
         "CountryFilterParameter": {
-            "placeholder": "Search by name"
+            "placeholder": "Wyszukiwanie według nazwy"
         },
         "AdministratorFilterParameter": {
             "placeholder": "Wyszukiwanie według adresu e-mail"
         },
         "RoleFilterParameter": {
-            "placeholder": "Search by name"
+            "placeholder": "Wyszukiwanie według nazwy"
         },
         "ChannelFilterParameter": {
             "placeholder": "Wyszukiwanie według kodu"
         },
         "ZoneFilterParameter": {
-            "placeholder": "Search by name"
+            "placeholder": "Wyszukiwanie według nazwy"
         },
         "TaxCategoryFilterParameter": {
-            "placeholder": "Search by name"
+            "placeholder": "Wyszukiwanie według nazwy"
         },
         "TaxRateFilterParameter": {
-            "placeholder": "Search by name"
+            "placeholder": "Wyszukiwanie według nazwy"
         },
         "StockLocationFilterParameter": {
-            "placeholder": "Search by name"
+            "placeholder": "Wyszukiwanie według nazwy"
         },
         "SellerFilterParameter": {
-            "placeholder": "Search by name"
+            "placeholder": "Wyszukiwanie według nazwy"
         },
         "PaymentMethodFilterParameter": {
-            "placeholder": "Search by name"
+            "placeholder": "Wyszukiwanie według nazwy"
         },
         "ShippingMethodFilterParameter": {
-            "placeholder": "Search by name"
+            "placeholder": "Wyszukiwanie według nazwy"
         },
         "filterLabels": {
             "active": "Aktywny",
@@ -278,19 +286,19 @@
         },
         "inOperator": {
             "Created": "Utworzony",
-            "Draft": "Draft",
+            "Draft": "Projekt",
             "AddingItems": "Dodawanie elementów",
             "ArrangingPayment": "Organizowanie płatności",
             "PaymentAuthorized": "Autoryzowana płatność",
             "PaymentSettled": "Płatność rozliczona",
             "PartiallyShipped": "Częściowo wysłane",
-            "Shipped": "Shipped",
+            "Shipped": "Wysłane",
             "PartiallyDelivered": "Częściowo dostarczone",
-            "Delivered": "Delivered",
-            "Modifying": "Modifying",
+            "Delivered": "Dostarczone",
+            "Modifying": "Modyfikacja",
             "ArrangingAdditionalPayment": "Ustalenie dodatkowej płatności",
-            "Cancelled": "Cancelled",
-            "InRealization": "In realization",
+            "Cancelled": "Anulowane",
+            "InRealization": "W realizacji",
             "Regular": "Regularny",
             "Aggregate": "Agregat",
             "Seller": "Sprzedawca"
@@ -463,7 +471,7 @@
         "tags": "Filtruj według tagu",
         "perPageValue": "{{value}} na stronę",
         "confirmButton": "Dodaj zasób",
-        "cancel": "Cancel",
+        "cancel": "Anuluj",
         "noImages": "Brak zasobów dla określonego wyszukiwania",
         "description": "Przesyłanie i zarządzanie zasobami, które mogą być używane w treści"
     },
@@ -471,18 +479,18 @@
         "dialogTitle": "Wybierz produkt",
         "dialogButton": "Wybierz produkt",
         "dialogSearchPlaceholder": "Wyszukiwanie produktu według nazwy",
-        "perPageValue": "{{value}} per page",
+        "perPageValue": "{{value}} na stronę",
         "confirmButton": "Dodaj produkt",
-        "cancel": "Cancel"
+        "cancel": "Anuluj"
     },
     "paymentMethods": {
         "3": "Inne",
-        "4": "Other",
+        "4": "Inne",
         "przelewy24": "Przelewy24",
         "standard-payment": "Standardowa płatność",
         "przelew-bankowy": "Przelew bankowy",
         "gotowka-za-pobraniem": "Za pobraniem",
-        "undefined": "Other"
+        "undefined": "Inne"
     },
     "selectedValue": "wybrano {{from}} z {{to}} wierszy",
     "deleteOrCancel": "Wybrano opcję Usuń/Anuluj",
@@ -506,16 +514,16 @@
     "custom-fields": {
         "title": "Pola niestandardowe",
         "description": "Pola utworzone przez wtyczki serwera można znaleźć tutaj",
-        "clear": "Clear",
+        "clear": "Wyczyść",
         "asset": {
             "title": "Lista aktywów",
             "description": "Wybierz aktywa z poniższej listy",
-            "pick": "Pick asset"
+            "pick": "Wybierz zasób"
         },
         "product": {
             "title": "Lista produktów",
             "description": "Wybierz produkty z poniższej listy",
-            "pick": "Pick product"
+            "pick": "Wybierz produkt"
         },
         "productvariant": {
             "title": "Lista wariantów produktu",
@@ -525,7 +533,7 @@
     },
     "history": {
         "edit": "Edytuj",
-        "delete": "Delete",
+        "delete": "Usuń",
         "deleteNoteHeader": "Usunąć notatkę?",
         "editNoteHeader": "Edytuj notatkę",
         "isPrivate": "Notatka jest prywatna",
@@ -533,9 +541,9 @@
         "toAdmins": "Widoczne tylko dla administratorów",
         "toAdminsAndCustomer": "Widoczny dla administratorów i klientów",
         "sure": "Czy na pewno?",
-        "cancel": "Cancel",
+        "cancel": "Anuluj",
         "addComment": "Dodaj komentarz",
-        "addCommentButton": "Add comment",
+        "addCommentButton": "Dodaj komentarz",
         "sureDescription": "Nie można przywrócić usuniętej notatki",
         "showPayment": "Pokaż płatność",
         "paymentId": "ID płatności: {{value}}",
@@ -551,6 +559,7 @@
         "private": "prywatny",
         "public": "publiczny",
         "noteContent": "Treść uwagi:",
+        "commentPlaceholder": "Wpisz tutaj swoją notatkę...",
         "entryType": {
             "CUSTOMER_REGISTERED": "Klient zarejestrowany",
             "CUSTOMER_VERIFIED": "Klient zweryfikowany",
@@ -591,5 +600,6 @@
     "globalErrors": {
         "foreignKeyError": "Nie można usunąć obiektu z tabeli {{parentTable}}, ponieważ istnieje zależność w tabeli {{dependentTable}}. Najpierw usuń powiązane rekordy lub zaktualizuj ich odniesienia.",
         "defaultError": "Wystąpił nieoczekiwany błąd"
-    }
+    },
+    "filters": "Filtry"
 }
