--- a/packages/admin-dashboard/src/locales/pl/table.json
+++ b/packages/admin-dashboard/src/locales/pl/table.json
@@ -69,9 +69,9 @@
     "buttons": {
         "add": "Dodaj",
         "apply": "Zastosuj",
-        "create": "Create",
+        "create": "Utwórz",
         "reset": "Reset",
-        "cancel": "Cancel"
+        "cancel": "Anuluj"
     },
     "operators": {
         "eq": "Równa się",
@@ -97,13 +97,16 @@
     },
     "columns": {
         "id": "ID",
-        "createdAt": "Created at",
-        "updatedAt": "Updated at",
+        "createdAt": "Utworzona w",
+        "updatedAt": "Zaktualizowano o",
         "featuredAsset": "Aktywa",
-        "name": "Name",
-        "slug": "Slug",
-        "enabled": "Enabled",
+        "name": "Nazwa",
+        "slug": "Ślimak",
+        "enabled": "Włączone",
         "sku": "SKU",
+        "description": "Opis",
+        "channels": "Kanały",
+        "permissions": "Uprawnienia",
         "price": "Cena",
         "priceWithTax": "Cena z podatkiem",
         "verified": "Zweryfikowany",
@@ -111,9 +114,29 @@
         "payments": "Płatności",
         "shippingAddress": "Adres wysyłki",
         "customer": "Klient",
-        "state": "State",
+        "state": "Stan",
         "totalWithTax": "Razem",
-        "code": "Code"
+        "code": "Kod",
+        "total": "Razem",
+        "type": "Typ",
+        "shipping": "Dostawa",
+        "orderPlacedAt": "Złożony o",
+        "firstName": "Imię",
+        "lastName": "Nazwisko",
+        "emailAddress": "Email",
+        "phoneNumber": "Nr tel.",
+        "values": "Wartości",
+        "isPrivate": "Prywatny",
+        "token": "Token",
+        "members": "Członkowie",
+        "isDefault": "Domyślna",
+        "value": "Wartość",
+        "customerGroup": "Grupa klientów",
+        "taxCategory": "Kategoria podatkowa",
+        "zone": "Strefa",
+        "active": "Aktywny",
+        "currencyCode": "Waluta",
+        "totalQuantity": "Liczba"
     },
     "actionsMenu": {
         "title": "Działania",
@@ -132,6 +155,7 @@
         "noFieldsFound": "Nie znaleziono pól",
         "searchFields": "Pola wyszukiwania",
         "noFiltersApplied": "Nie zastosowano żadnych filtrów",
-        "emptyState": "Dodaj filtry, aby zawęzić wyniki."
+        "emptyState": "Dodaj filtry, aby zawęzić wyniki.",
+        "operatorPlaceholder": "Operator wyboru"
     }
 }
